--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="osman nuri okumuş personal site">
-  <meta name="author" content="Osman Nuri Okumuş">
+  <meta name="author" content="emir
 
-  <title>onokumus</title>
+  <title>emir</title>
 
   <!-- Control the behavior of search engine crawling and indexing -->
   <meta name="robots" content="index,follow,noodp"><!-- All Search Engines -->
@@ -84,7 +84,7 @@
       <img class="masthead-avatar mb-5" src="img/avataaars.svg" alt="">
 
       <!-- Masthead Heading -->
-      <h1 class="masthead-heading text-uppercase mb-0">Osman Nurİ Okumuş</h1>
+      <h1 class="masthead-heading text-uppercase mb-0">emir "just"</h1>
 
       <!-- Icon Divider -->
       <div class="divider-custom divider-light">
