--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <!-- Navigation -->
   <nav id="mainNav" class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">onokumus</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">emir</a>
 
       <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded"
         type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
@@ -249,7 +249,7 @@
 
       <div class="row">
         <div class="col">
-          <p class="text-center lead">Send email me. <br>onokumus [at] gmail [dot] com</p>
+          <p class="text-center lead">Send email me. <br>emir [at] gmail [dot] com</p>
         </div>
       </div>
     </div>
